--- a/.classpath
+++ b/.classpath
@@ -28,5 +28,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/Sardar/Downloads/ojdbc6.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
